--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -55,7 +55,7 @@ services:
     image: nginx:stable-alpine
     command: 'nginx -g "daemon off;"'
     volumes:
-      - ./mock-integrations/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./mock-integrations/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 7010:5000
 
