--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -62,8 +62,8 @@ services:
   data-lpa:
     container_name: data-lpa
     image: stoplight/prism:4
-    command: 'mock -h 0.0.0.0 /tmp/swagger.yaml'
+    command: 'mock -h 0.0.0.0 /tmp/openapi.yaml'
     volumes:
-      - ./mock-integrations/swagger.yaml:/tmp/swagger.yaml:ro
+      - ./mock-integrations/openapi.yaml:/tmp/openapi.yaml:ro
     ports:
       - 7011:4010
