--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -53,6 +53,8 @@ services:
   api-gateway:
     container_name: api-gateway
     image: nginx:stable-alpine
+    depends_on:
+      - data-lpa
     command: 'nginx -g "daemon off;"'
     volumes:
       - ./mock-integrations/nginx.conf:/etc/nginx/conf.d/default.conf
