--- a/mock-integrations/nginx.conf
+++ b/mock-integrations/nginx.conf
@@ -3,13 +3,14 @@
 # but use different response fields to derive the date
 map $request_uri $swagger_example {
     # 200 examples
-    "~700000000047" 'lpa0047';
-    "~700000000138" 'lpa0138';
-    "~700000000252" 'lpa0252';
-    "~700000000344" 'lpa0344';
-    "~700000000435" 'lpa0435';
-    "~700000000526" 'lpa0526';
-    "~700000000617" 'lpa0617';
+    # 200 examples
+    "~700000000617" "lpa0617";
+    "~700000000526" "lpa0526";
+    "~700000000435" "lpa0435";
+    "~700000000344" "lpa0344";
+    "~700000000252" "lpa0252";
+    "~700000000138" "lpa0138";
+    "~700000000047" "lpa0047";
 
     # 404 - results in a "waiting" status in Make
     # NB there doesn't seem to be a way to supply an example for a non-200
