--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -47,3 +47,25 @@ services:
     environment:
       REGION: eu-west-1
       SEED_PATH: /init/kms-seed.yaml
+
+  # ---------------------------
+  # Sirius gateway mock
+  api-gateway:
+    container_name: api-gateway
+    image: nginx:stable-alpine
+    depends_on:
+      - data-lpa
+    command: 'nginx -g "daemon off;"'
+    volumes:
+      - ./mock-integrations/nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - 7010:5000
+
+  data-lpa:
+    container_name: data-lpa
+    image: stoplight/prism:4
+    command: 'mock -h 0.0.0.0 /tmp/openapi.yaml'
+    volumes:
+      - ./mock-integrations/mock-openapi.yaml:/tmp/openapi.yaml:ro
+    ports:
+      - 7011:4010
