UML-2157 - use next gen circleci convenience images (#1414)
* use next gen circleci convenience images

* install requirements

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1319,7 +1319,7 @@ orbs:
 jobs:
   slack_environment_redeploy:
     docker:
-      - image: circleci/python
+      - image: cimg/python:3.7
         auth:
           username: $DOCKER_USER
           password: $DOCKER_ACCESS_TOKEN
@@ -1341,7 +1341,7 @@ jobs:
 
   python_templated_slack_notify:
     docker:
-      - image: circleci/python
+      - image: cimg/python:3.7
         auth:
           username: $DOCKER_USER
           password: $DOCKER_ACCESS_TOKEN
@@ -1369,7 +1369,7 @@ jobs:
 
   slack_notify_stats:
     docker:
-      - image: circleci/python
+      - image: cimg/python:3.7
         auth:
           username: $DOCKER_USER
           password: $DOCKER_ACCESS_TOKEN
@@ -1381,7 +1381,7 @@ jobs:
       - run:
           name: Get Stats
           command: |
-            sudo pip3 install -r scripts/pipeline/requirements.txt
+            pip install -r scripts/pipeline/requirements.txt
             python ~/project/scripts/get_statistics/get_statistics.py --text > ./output.txt
       - slack/notify:
           title: "Service Statistics - Use a Lasting Power of Attorney Production"
@@ -1392,7 +1392,7 @@ jobs:
 
   ecr_scan_results:
     docker:
-      - image: circleci/python
+      - image: cimg/python:3.7
         auth:
           username: $DOCKER_USER
           password: $DOCKER_ACCESS_TOKEN
@@ -1402,7 +1402,7 @@ jobs:
       - run:
           name: Check ECR Scan Results
           command: |
-            sudo pip3 install -r scripts/pipeline/requirements.txt
+            pip install -r scripts/pipeline/requirements.txt
             export IMAGE_TAG=$(bash ~/project/scripts/pipeline/set_environment_variables/set_image_tag.sh $CIRCLE_BRANCH $CIRCLE_SHA1) >> $BASH_ENV
             echo $IMAGE_TAG
             python scripts/pipeline/check_ecr_scan_results/aws_ecr_scan_results.py --search use_an_lpa --tag $IMAGE_TAG
@@ -1419,13 +1419,14 @@ jobs:
       - run:
           name: Cleanup Workspaces
           command: |
+            pip install -r scripts/pipeline/requirements.txt
             cd terraform/environment
             terraform init
             ../../scripts/pipeline/workspace_cleanup/workspace_cleanup.sh $(../../scripts/pipeline/workspace_cleanup/get_workspaces_linux)
 
   cancel_redundant_builds:
     docker:
-      - image: circleci/python
+      - image: cimg/python:3.7
         auth:
           username: $DOCKER_USER
           password: $DOCKER_ACCESS_TOKEN
@@ -1435,6 +1436,7 @@ jobs:
       - run:
           name: Cancel Redundant Builds
           command: |
+            pip install -r scripts/pipeline/requirements.txt
             python scripts/pipeline/cancel_previous_jobs/cancel_redundant_builds.py \
             --circle_project_username ${CIRCLE_PROJECT_USERNAME} \
             --circle_project_reponame ${CIRCLE_PROJECT_REPONAME} \
