--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -583,8 +583,8 @@ orbs:
               name: Install Terraform Workspace Manager
               command: |
                 wget https://github.com/TomTucka/terraform-workspace-manager/releases/download/v0.3.1/terraform-workspace-manager_Linux_x86_64.tar.gz -O $HOME/terraform-workspace-manager.tar.gz
-                tar -xvf $HOME/terraform-workspace-manager.tar.gz -C /usr/local/bin
-                chmod +x /usr/local/bin/terraform-workspace-manager
+                tar -xvf $HOME/terraform-workspace-manager.tar.gz -C /usr/bin
+                chmod +x /usr/bin/terraform-workspace-manager
       install_python:
         steps:
           - run:
