Adding nginx file

--- a/mock-integrations/nginx.conf
+++ b/mock-integrations/nginx.conf
@@ -4,6 +4,7 @@
 map $request_uri $swagger_example {
     # 200 examples
     # 200 examples
+    "~700000151451" "lpa1451";
     "~700000000617" "lpa0617";
     "~700000000526" "lpa0526";
     "~700000000435" "lpa0435";
