pin tfsec action version

--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           fetch-depth: 2
       - name: tfsec with pr comments
-        uses: tfsec/tfsec-pr-commenter-action@main
+        uses: tfsec/tfsec-pr-commenter-action@v1.0.5
         with:
           working_directory: ${{ matrix.terraform_path }}
           github_token: ${{secrets.GITHUB_TOKEN}}
