--- a/service-admin/.vscode/launch.json
+++ b/service-admin/.vscode/launch.json
@@ -13,9 +13,10 @@
             "cwd": "${workspaceFolder}",
             "env": {
                 "AWS_DYNAMODB_ENDPOINT": "http://localhost:8000",
+                "ADMIN_JWT_SIGNING_KEY_URL": "http://localhost:5000",
                 "AWS_ACCESS_KEY_ID": "-",
                 "AWS_SECRET_ACCESS_KEY": "-",
-                "ADMIN_JWT_SIGNING_KEY_URL": "http://localhost:5000"
+                "ADMIN_LOGOUT_URL": "https://login-admin-lastingpowerofattorney.auth.eu-west-1.amazoncognito.com/logout"
             }
         }
     ]
