--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
 
   service-pdf:
     container_name: service-pdf
-    image: 311462405659.dkr.ecr.eu-west-1.amazonaws.com/pdf_service:v1.37.0
+    image: 311462405659.dkr.ecr.eu-west-1.amazonaws.com/pdf_service:latest
     ports:
       - 9004:80
 
