--- a/.github/workflows/golang-linting.yml
+++ b/.github/workflows/golang-linting.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v3
         with:
-          go-version: '^1.16' # The Go version to download (if necessary) and use.
+          go-version: '1.16' # The Go version to download (if necessary) and use.
       - run: go version
 
       - name: golangci-lint
