--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1265,7 +1265,7 @@ orbs:
                   export IMAGE_TAG=$(~/project/scripts/pipeline/set_environment_variables/set_image_tag.sh <<parameters.image_tag_input>>) >> $BASH_ENV
                 fi
                 echo $IMAGE_TAG
-                terraform apply -lock-timeout=300s --auto-approve -var container_version=${IMAGE_TAG}
+                terraform apply -lock-timeout=300s --auto-approve -var container_version=${IMAGE_TAG} -var admin_container_version=${IMAGE_TAG}
                 mv cluster_config.json /tmp/
           - persist_to_workspace:
               root: /tmp
