--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,6 +280,10 @@ workflows:
                 only: [
                   /admin\/.*/
                   ]
+            requires:
+              [
+                admin_app_test,
+              ]
 
         - use-my-lpa/codecov_upload:
             name: codecov_upload
@@ -1294,14 +1298,14 @@ orbs:
                 else
                   export IMAGE_TAG=$(~/project/scripts/pipeline/set_environment_variables/set_image_tag.sh <<parameters.image_tag_input>>) >> $BASH_ENV
                 fi
-                echo $IMAGE_TAG
+                echo "deploying service version ${IMAGE_TAG}"
 
                 if [ "<<parameters.admin_image_tag_input>>" == "latest" ]; then
                   export ADMIN_IMAGE_TAG="latest"
                 else
                   export ADMIN_IMAGE_TAG=$(~/project/scripts/pipeline/set_environment_variables/set_image_tag.sh <<parameters.admin_image_tag_input>>) >> $BASH_ENV
                 fi
-                echo $ADMIN_IMAGE_TAG
+                echo "deploying admin app version ${ADMIN_IMAGE_TAG}"
 
                 terraform apply -lock-timeout=300s --auto-approve -var container_version=${IMAGE_TAG} -var admin_container_version=${ADMIN_IMAGE_TAG}
                 mv cluster_config.json /tmp/
