Uml 1115 admin app activation keys (#1446)
* get basic activation search functionality working

* make templates reflect code changes

* update changes to aws sdk v2

--- a/service-admin/.vscode/launch.json
+++ b/service-admin/.vscode/launch.json
@@ -13,6 +13,8 @@
             "cwd": "${workspaceFolder}",
             "env": {
                 "AWS_DYNAMODB_ENDPOINT": "http://localhost:8000",
+                "AWS_ACCESS_KEY_ID": "-",
+                "AWS_SECRET_ACCESS_KEY": "-",
                 "ADMIN_JWT_SIGNING_KEY_URL": "http://localhost:5000"
             }
         }
