--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,7 @@ updates:
       # Check for updates on the first of each month at 10am UTC
       interval: "monthly"
       time: "10:00"
+      timezone: "Europe/London"
     versioning-strategy: lockfile-only
 
   # Enable version updates for service-pdf npm
@@ -17,6 +18,7 @@ updates:
       # Check for updates on the first of each month at 10am UTC
       interval: "monthly"
       time: "10:00"
+      timezone: "Europe/London"
     versioning-strategy: lockfile-only
 
   # Enable version updates for service-front composer
@@ -26,6 +28,7 @@ updates:
       # Check for updates on the first of each month at 10am UTC
       interval: "monthly"
       time: "10:00"
+      timezone: "Europe/London"
     versioning-strategy: lockfile-only
 
   # Enable version updates for service-api composer
@@ -35,6 +38,7 @@ updates:
       # Check for updates on the first of each month at 10am UTC
       interval: "monthly"
       time: "10:00"
+      timezone: "Europe/London"
     versioning-strategy: lockfile-only
 
     # Enable version updates for smoke tests composer
@@ -44,6 +48,7 @@ updates:
       # Check for updates on the first of each month at 10am UTC
       interval: "monthly"
       time: "10:00"
+      timezone: "Europe/London"
     versioning-strategy: lockfile-only
 
     # Enable version updates for account terraform
@@ -53,6 +58,7 @@ updates:
       # Check for updates on the first of each month at 10am UTC
       interval: "monthly"
       time: "10:00"
+      timezone: "Europe/London"
 
     # Enable version updates for environment terraform
   - package-ecosystem: "terraform"
@@ -61,3 +67,20 @@ updates:
       # Check for updates on the first of each month at 10am UTC
       interval: "monthly"
       time: "10:00"
+      timezone: "Europe/London"
+
+    # Enable version updates for service-admin gomod
+  - package-ecosystem: "gomod"
+    directory: "/service-admin"
+    schedule:
+      interval: "monthly"
+      time: "10:00"
+      timezone: "Europe/London"
+
+    # Enable version updates for service-admin docker
+  - package-ecosystem: "docker"
+    directory: "/service-admin"
+    schedule:
+      interval: "monthly"
+      time: "10:00"
+      timezone: "Europe/London"
