run go modules update PRs through admin only workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -254,7 +254,8 @@ workflows:
             filters:
               branches:
                 only: [
-                  /admin\/.*/
+                  /admin\/.*/,
+                  /dependabot\/go_modules\/.*/,
                   ]
 
         - use-my-lpa/lint_terraform:
@@ -262,7 +263,8 @@ workflows:
             filters:
               branches:
                 only: [
-                  /admin\/.*/
+                  /admin\/.*/,
+                  /dependabot\/go_modules\/.*/,
                   ]
 
         - use-my-lpa/docker_test_admin:
@@ -270,7 +272,8 @@ workflows:
             filters:
               branches:
                 only: [
-                  /admin\/.*/
+                  /admin\/.*/,
+                  /dependabot\/go_modules\/.*/,
                   ]
 
         - use-my-lpa/docker_build_admin:
@@ -278,7 +281,8 @@ workflows:
             filters:
               branches:
                 only: [
-                  /admin\/.*/
+                  /admin\/.*/,
+                  /dependabot\/go_modules\/.*/,
                   ]
             requires:
               [
@@ -290,7 +294,8 @@ workflows:
             filters:
               branches:
                 only: [
-                  /admin\/.*/
+                  /admin\/.*/,
+                  /dependabot\/go_modules\/.*/,
                   ]
             requires:
               [
@@ -303,7 +308,8 @@ workflows:
             filters:
               branches:
                 only: [
-                  /admin\/.*/
+                  /admin\/.*/,
+                  /dependabot\/go_modules\/.*/,
                   ]
             requires: [cancel_previous_jobs,lint_terraform]
 
@@ -313,7 +319,8 @@ workflows:
             filters:
               branches:
                 only: [
-                  /admin\/.*/
+                  /admin\/.*/,
+                  /dependabot\/go_modules\/.*/,
                   ]
             requires:
               [
@@ -326,7 +333,8 @@ workflows:
             filters:
               branches:
                 only: [
-                  /admin\/.*/
+                  /admin\/.*/,
+                  /dependabot\/go_modules\/.*/,
                   ]
             requires: [dev_apply_environment_terraform]
 
@@ -335,7 +343,8 @@ workflows:
             filters:
               branches:
                 only: [
-                  /admin\/.*/
+                  /admin\/.*/,
+                  /dependabot\/go_modules\/.*/,
                   ]
             requires: [dev_seed_database]
 
@@ -345,7 +354,8 @@ workflows:
             filters:
               branches:
                 only: [
-                  /admin\/.*/
+                  /admin\/.*/,
+                  /dependabot\/go_modules\/.*/,
                   ]
             requires: [dev_run_behat_tests]
 
@@ -357,7 +367,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
 
         - use-my-lpa/lint_terraform:
@@ -366,7 +377,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
 
         - use-my-lpa/node_test_web:
@@ -375,7 +387,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
 
         - use-my-lpa/node_build_web:
@@ -384,7 +397,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
             requires: [test_web]
 
@@ -394,7 +408,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
             requires: [build_web]
 
@@ -404,7 +419,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
             requires: [build_web]
 
@@ -414,7 +430,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
 
         - use-my-lpa/docker_build_api_web:
@@ -423,7 +440,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
 
         - use-my-lpa/docker_test_admin:
@@ -432,7 +450,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
 
         - use-my-lpa/docker_build_admin:
@@ -441,7 +460,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
 
         - use-my-lpa/codecov_upload:
@@ -450,7 +470,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
             requires:
               [
@@ -467,7 +488,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
             requires: [cancel_previous_jobs,lint_terraform]
 
@@ -477,7 +499,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
             requires:
               [
@@ -496,7 +519,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
             requires:
               [
@@ -513,7 +537,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
             requires: [dev_apply_environment_terraform]
 
@@ -523,7 +548,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
             requires: [dev_seed_database]
 
@@ -535,7 +561,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
             requires: [dev_run_behat_tests]
 
@@ -546,7 +573,8 @@ workflows:
               main,
               /dependabot\/.*/,
               /tf\/.*/,
-              /admin\/.*/
+              /admin\/.*/,
+              /dependabot\/go_modules\/.*/,
               ] } }
             requires: [post_environment_domains]
 
